Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45087

ODBC: Native codes are lost when calling SQLGetDiagRec repeatedly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.6.0
    • 5.4.0, 6.0
    • SQL Support
    • None
    • 4ec5c0efc (dev)

    Description

      When SQLGetDiagRec is called repeatedly in qWarnODBCHandle, in order to obtain all available diagnostics, the message texts are concatenated and all of them returned, but the native code is overwritten for every call.

      This means that if there a severe error first followed by less important warnings later, querying lastError().number() will only contain really the last of the errors and the text will contain all texts concatenated.

      I suggest that all native errors are passed up somehow.

      Attachments

        For Gerrit Dashboard: QTBUG-45087
        # Subject Branch Project Status CR V

        Activity

          People

            chehrlic Christian Ehrlicher
            jdevera Jacobo de Vera
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes